# tree-sitter-scss

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: ci.yml
bindings/node/: binding.cc  binding_test.js  index.js
bindings/python/tests/: test_binding.py
bindings/rust/: build.rs  lib.rs
examples/: github.com.scss  reynolds.scss  showcase.scss
queries/: folds.scm  highlights.scm  injections.scm  locals.scm  outline.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: declarations.txt  statements.txt
